# python-parquet-examples

./: pyproject.toml
files/: example.parquet
files/example.parq/: _common_metadata  _metadata  part.0.parquet  part.1.parquet  part.2.parquet
src/: describe_parquet.py  describe_parquet_estabelecimentos.py  filter_parquet.py  filter_parquet_estabelecimentos.py  read_parquet.py  read_parquet_estabelecimentos.py  write_parquet.py  write_parquet_estabelecimentos.py  write_parquet_fastparquet.py
