[tool.poetry]
name = "python-parquet-examples"
version = "0.1.0"
description = ""
authors = ["Matheus Rodrigues <matheusrf96@gmail.com>"]
readme = "README.md"
packages = [{include = "python_parquet_examples"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
