[tool.poetry]
name = "python-parquet-examples"
version = "0.1.0"
description = ""
authors = ["Matheus Rodrigues <matheusrf96@gmail.com>"]
readme = "README.md"
packages = [{include = "python_parquet_examples"}]

[tool.poetry.dependencies]
python = "^3.12"
fastparquet = "^2024.11.0"
pandas = "^2.2.3"
pyarrow = "^18.1.0"
pydantic = "^2.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
